fix: change behavior for shift and caps lock

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Helvetica Neue";
-  src: url("./../../assets/fonts/HelveticaNeueCyr-Light.ttf");
+  src: url("./../assets/fonts/HelveticaNeueCyr-Light.ttf");
 }
 html,
 body {
