--- a/src/sass/utils/_fonts.scss
+++ b/src/sass/utils/_fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "Helvetica Neue";
-  src: url("./../../assets/fonts/HelveticaNeueCyr-Light.ttf");
+  src: url("./../assets/fonts/HelveticaNeueCyr-Light.ttf");
 }
